[ADD] Groups, rules, list view and more..

--- a/music_school_dankito/views/music_school_instrument_view.xml
+++ b/music_school_dankito/views/music_school_instrument_view.xml
@@ -9,8 +9,12 @@
                     <group>
                         <field name="name" />
                         <field name="family" />
-                        <field name="description" />
                     </group>
+                    <notebook>
+                        <page string="Instrument description">
+                            <field name="description" />
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
