[ADD] List and form view instrument

--- a/music_school_nacho/views/music_school_instrument_views.xml
+++ b/music_school_nacho/views/music_school_instrument_views.xml
@@ -13,4 +13,40 @@
         </field>
     </record>
 
+    <record id="music_school_instrument_view_list" model="ir.ui.view">
+        <field name="name">music.school.instrument.view.list</field>
+        <field name="model">music.school.instrument</field>
+        <field name="arch" type="xml">
+            <list string="Instruments">
+                <field name="name"/>
+                <field name="family" optional="show"/>
+                <field name="description" optional="hide"/>
+            </list>
+        </field>
+    </record>
+
+    <record id="music_school_instrument_view_form" model="ir.ui.view">
+        <field name="name">music.school.instrument.view.form</field>
+        <field name="model">music.school.instrument</field>
+        <field name="arch" type="xml">
+            <form string="Instrument">
+                <sheet>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="name" placeholder="Instrument"/>
+                        </h1>
+                    </div>
+                    <group>
+                        <field name="family" widget="radio"/>
+                    </group>
+                    <notebook>
+                    <page string="Description">
+                        <field name="description"/>
+                    </page>
+                </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
 </odoo>
