--- a/music_school_edu/views/music_school_student_view.xml
+++ b/music_school_edu/views/music_school_student_view.xml
@@ -31,6 +31,9 @@
         <field name="model">music.school.student</field>
         <field name="arch" type="xml">
             <form string="">
+            <header>
+                <button string="Generate reference" name="generate_reference" type="object" class="oe_highlight"/>
+            </header>
                 <sheet>
                     <div class="oe_title">
                         <h1>
@@ -38,6 +41,8 @@
                         </h1>
                     </div>
                     <group>
+                    <group>
+                        <field name="reference" readonly="1"/>
                         <field name="email"/>
                         <field name="phone"/>
                     </group>
@@ -45,6 +50,7 @@
                         <field name="user_id"/>
                         <field name="age"/>
                         <field name="birthdate"/>
+                    </group>
                     </group>
                     <notebook>
                         <page string="Notes">
