--- a/music_school_nacho/views/music_school_student_views.xml
+++ b/music_school_nacho/views/music_school_student_views.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-
 <record id="music_school_student_action" model="ir.actions.act_window">
     <field name="name">Students</field>
     <field name="res_model">music.school.student</field>
@@ -33,6 +32,9 @@
     <field name="model">music.school.student</field>
     <field name="arch" type="xml">
         <form string="Students">
+            <header>
+            <button string="Generate reference" name="generate_reference" type="object" class="btn-primary"/>
+            </header>
             <sheet>
                 <div class="oe_title">
                     <h1>
@@ -41,6 +43,7 @@
                 </div>
                 <group>
                     <group>
+                        <field name="reference" readonly="1"/>
                         <field name="email"/>
                         <field name="phone"/>
                     </group>
@@ -61,5 +64,4 @@
 </record>
 
     
-
 </odoo>
