--- a/music_school_jaume_tor/views/music_school_instrument_views.xml
+++ b/music_school_jaume_tor/views/music_school_instrument_views.xml
@@ -4,7 +4,7 @@
     <record id="music_school_instrument_action" model="ir.actions.act_window">
         <field name="name">Instrument</field>
         <field name="res_model">music.school.instrument</field>
-        <field name="view_mode">list,form</field>
+        <field name="view_mode">kanban,list,form</field>
         <field name="context">{}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
