--- a/music_school_jaume_tor/views/music_school_student_views.xml
+++ b/music_school_jaume_tor/views/music_school_student_views.xml
@@ -4,7 +4,7 @@
 <record id="music_school_student_action" model="ir.actions.act_window">
     <field name="name">Students</field>
     <field name="res_model">music.school.student</field>
-    <field name="view_mode">list,form</field>
+    <field name="view_mode">kanban,list,form</field>
     <field name="context">{}</field>
     <field name="help" type="html">
     <p class="o_view_nocontent_smiling_face">
@@ -13,6 +13,56 @@
     </field>
 </record>
 
-    
+
+<record id="music_school_student_view_list" model="ir.ui.view">
+    <field name="name">music.school.student.view.list</field>
+    <field name="model">music.school.student</field>
+    <field name="arch" type="xml">
+        <list multi_edit="1" string="Students">
+            <field name="name"/>
+            <field name="email" optional="show"/>
+            <field name="phone" optional="show"/>
+            <field name="user_id" optional="show"/>
+            <field name="birthdate"/>
+            <field name="age" optional="hide"/> 
+        </list>
+    </field>
+</record>
+
+<record id="music_school_student_view_form" model="ir.ui.view">
+    <field name="name">music.school.student.view.form</field>
+    <field name="model">music.school.student</field>
+    <field name="arch" type="xml">
+        <form string="Students">
+            <header>
+            <button string="Generate reference" name="generate_reference" type="object" class="btn-primary"/>
+            </header>
+            <sheet>
+                <div class="oe_title">
+                    <h1>
+                        <field name="name" placeholder="Student"/>
+                    </h1>
+                </div>
+                <group>
+                    <group>
+                        <field name="reference" readonly="1"/>
+                        <field name="email"/>
+                        <field name="phone"/>
+                    </group>
+                    <group>
+                        <field name="user_id"/>
+                        <field name="birthdate"/>
+                        <field name="age"/>
+                    </group>
+                </group>
+                <notebook>
+                    <page string="Notes">
+                        <field name="notes"/>
+                    </page>
+                </notebook>
+            </sheet>
+        </form>
+    </field>
+</record>
 
 </odoo>
