--- a/music_school_jaume_tor/views/music_school_student_views.xml
+++ b/music_school_jaume_tor/views/music_school_student_views.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-
 <record id="music_school_student_action" model="ir.actions.act_window">
     <field name="name">Students</field>
     <field name="res_model">music.school.student</field>
-    <field name="view_mode">kanban,list,form</field>
+    <field name="view_mode">list,form</field>
     <field name="context">{}</field>
     <field name="help" type="html">
     <p class="o_view_nocontent_smiling_face">
@@ -12,7 +11,6 @@
     </p>
     </field>
 </record>
-
 
 <record id="music_school_student_view_list" model="ir.ui.view">
     <field name="name">music.school.student.view.list</field>
@@ -65,4 +63,5 @@
     </field>
 </record>
 
+    
 </odoo>
