--- a/music_school_angel/views/music_school_instrument_views.xml
+++ b/music_school_angel/views/music_school_instrument_views.xml
@@ -13,4 +13,43 @@
     </field>
 </record>
 
+<record id="music_school_instrument_view_list" model="ir.ui.view">
+    <field name="name">music.school.instrument.view.list</field>
+    <field name="model">music.school.instrument</field>
+    <field name="arch" type="xml">
+        <list multi_edit="1" string="Instruments">
+            <field name="name"/>
+            <field name="family" optional="show"/>           
+            <field name="description" optional="hide"/>
+        </list>
+    </field>
+</record>
+
+
+<record id="music_school_instrument_view_form" model="ir.ui.view">
+    <field name="name">music.school.instrument.view.form</field>
+    <field name="model">music.school.instrument</field>
+    <field name="arch" type="xml">
+        <form string="Instruments">
+            <sheet>
+                <div class="oe_title">
+                    <h1>
+                        <field name="name" placeholder="Instrument"/>
+                    </h1>
+                </div>
+                <group>
+                    <group>
+                        <field name="family"/>
+                    </group>                    
+                </group>
+                <notebook>
+                    <page string="Description">
+                        <field name="description"/>
+                    </page>
+                </notebook>
+            </sheet>
+        </form>
+    </field>
+</record>
+
 </odoo>
