--- a/music_school_angel/views/music_school_student_views.xml
+++ b/music_school_angel/views/music_school_student_views.xml
@@ -13,4 +13,54 @@
     </field>
 </record>
 
+
+<record id="music_school_student_view_list" model="ir.ui.view">
+    <field name="name">music.school.student.view.list</field>
+    <field name="model">music.school.student</field>
+    <field name="arch" type="xml">
+        <list multi_edit="1" string="Students">
+            <field name="name"/>
+            <field name="email" optional="show"/>
+            <field name="phone" optional="show"/>
+            <field name="user_id" optional="show"/>
+            <field name="birthdate" optional="show"/>
+            <field name="age" optional="hide"/>           
+        </list>
+    </field>
+</record>
+
+
+<record id="music_school_student_view_form" model="ir.ui.view">
+    <field name="name">music.school.student.view.form</field>
+    <field name="model">music.school.student</field>
+    <field name="arch" type="xml">
+        <form string="Students">
+            <sheet>
+                <div class="oe_title">
+                    <h1>
+                        <field name="name" placeholder="Student"/>
+                    </h1>
+                </div>
+                <group>
+                    <group>
+                        <field name="email"/>
+                        <field name="phone"/>
+                    </group>
+                    <group>
+                        <field name="user_id"/>
+                        <field name="birthdate"/>
+                        <field name="age"/>
+                    </group>
+                    
+                </group>
+                <notebook>
+                    <page string="Notes">
+                        <field name="notes"/>
+                    </page>
+                </notebook>
+            </sheet>
+        </form>
+    </field>
+</record>
+
 </odoo>
