--- a/music_school_nacho/views/music_school_instrument_views.xml
+++ b/music_school_nacho/views/music_school_instrument_views.xml
@@ -50,6 +50,7 @@
                     <page string="Observations">
                     <group>
                         <field name="last_maintenance_date" readonly="1"/>
+                    </group>
                     </page>
                 </notebook>
                 </sheet>
