--- a/music_school_dankito/views/music_school_student_view.xml
+++ b/music_school_dankito/views/music_school_student_view.xml
@@ -16,6 +16,7 @@
                         <field name="email" />
                         <field name="phone" />
                         <field name="birthday" />
+                        <field name="age" />
                         <field name="user_id" />
                     </group>
                 </sheet>
