--- a/music_school_dankito/views/music_school_menu.xml
+++ b/music_school_dankito/views/music_school_menu.xml
@@ -16,4 +16,28 @@
         action="music_school_instrument_menu_action"
         parent="music_school_menu"
         sequence="11"/>
+    <menuitem
+        id="music_school_teacher"
+        name="Teacher"
+        action="music_school_teacher_menu_action"
+        parent="music_school_menu"
+        sequence="12"/>
+    <menuitem
+        id="music_school_classroom"
+        name="Classroom"
+        action="music_school_classroom_menu_action"
+        parent="music_school_menu"
+        sequence="13"/>
+    <menuitem
+        id="music_school_course"
+        name="Course"
+        action="music_school_course_menu_action"
+        parent="music_school_menu"
+        sequence="14"/>
+    <menuitem
+        id="music_school_lessons"
+        name="Lessons"
+        action="music_school_lesson_menu_action"
+        parent="music_school_menu"
+        sequence="15"/>
 </odoo>
