--- a/music_school_edu/views/music_school_menuitems.xml
+++ b/music_school_edu/views/music_school_menuitems.xml
@@ -4,5 +4,9 @@
     <menuitem id="model_name_menu" name="Music School" sequence="10">
         <menuitem id="music_school_student_menu" name="Student" action="music_school_student_action" sequence="10"/>
         <menuitem id="music_school_intrument_menu" name="Instrument" action="music_school_instrument_action" sequence="20"/>
+        <menuitem id="music_school_teacher_menu" name="Teacher" action="music_school_teacher_action" sequence="30"/>
+        <menuitem id="music_school_course_menu" name="Course" action="music_school_course_action" sequence="40"/>
+        <menuitem id="music_school_class_menu" name="Class" action="music_school_classroom_action" sequence="50"/>
+        <menuitem id="music_school_lesson_menu" name="Lesson" action="music_school_lesson_action" sequence="60"/>
     </menuitem>
 </odoo>
