--- a/music_school_jaume_tor/views/music_school_menuitems.xml
+++ b/music_school_jaume_tor/views/music_school_menuitems.xml
@@ -16,6 +16,10 @@
 <menuitem id="music_school_menu" name="Music School" sequence="10">
     <menuitem id="music_school_student_menu" name="Student" action="music_school_student_action" sequence="10"/>
     <menuitem id="music_school_instrument_menu" name="Instrument" action="music_school_instrument_action" sequence="20"/>
+    <menuitem id="menu_professor" name="Professors" action="music_school_professor_action"/>
+    <menuitem id="menu_course" name="Courses" action="music_school_course_action"/>
+    <menuitem id="menu_classroom" name="Classrooms"  action="music_school_classroom_action"/>
+    <menuitem id="menu_lesson" name="Lessons"  action="music_school_lesson_action"/>
 </menuitem>
 
 </odoo>
