--- a/music_school_angel/views/music_school_student_views.xml
+++ b/music_school_angel/views/music_school_student_views.xml
@@ -35,6 +35,9 @@
     <field name="model">music.school.student</field>
     <field name="arch" type="xml">
         <form string="Students">
+            <header>
+                <button string="Generate reference" name="generate_reference" type="object" class="oe_highlight"/>
+            </header>
             <sheet>
                 <div class="oe_title">
                     <h1>
@@ -43,6 +46,7 @@
                 </div>
                 <group>
                     <group>
+                        <field name="reference" readonly="1"/>
                         <field name="email"/>
                         <field name="phone"/>
                     </group>
