--- a/music_school_angel/views/music_school_instrument_views.xml
+++ b/music_school_angel/views/music_school_instrument_views.xml
@@ -31,7 +31,10 @@
     <field name="name">music.school.instrument.view.form</field>
     <field name="model">music.school.instrument</field>
     <field name="arch" type="xml">
-        <form string="Instruments">
+        <form string="Instrument">
+            <header>
+                <button string="Instrument Maintenance" name="instrument_maintenance" type="object" class="oe_highlight"/>
+            </header>
             <sheet>
                 <div class="oe_title">
                     <h1>
