[ADD] search,pivot,calendar,graph,kanban,domains

--- a/music_school_nacho/views/music_school_instrument_views.xml
+++ b/music_school_nacho/views/music_school_instrument_views.xml
@@ -19,6 +19,7 @@
         <field name="arch" type="xml">
             <list string="Instruments">
                 <field name="name"/>
+                <field name="family_id" optional="show"/>
                 <field name="family" optional="show"/>
                 <field name="description" optional="hide"/>
                 <field name="last_maintenance_date" optional="hide"/>
@@ -41,6 +42,7 @@
                         </h1>
                     </div>
                     <group>
+                        <field name="family_id"/>
                         <field name="family" widget="radio"/>
                     </group>
                     <notebook>
