--- a/music_school_nacho/views/music_school_teacher_views.xml
+++ b/music_school_nacho/views/music_school_teacher_views.xml
@@ -22,6 +22,7 @@
                 <field name="name"/>
                 <field name="email" optional="show"/>
                 <field name="phone" optional="show"/>
+                <field name="level" optional="show"/>
             </list>
         </field>
     </record>
@@ -38,6 +39,7 @@
                     </h1>
                 </div>
                     <group>
+                        <field name="level"/>
                         <field name="email"/>
                         <field name="phone"/>
                     </group>
