--- a/music_school_nacho/views/music_school_instrument_views.xml
+++ b/music_school_nacho/views/music_school_instrument_views.xml
@@ -20,7 +20,7 @@
             <list string="Instruments">
                 <field name="name"/>
                 <field name="family_id" optional="show"/>
-                <field name="family" optional="show"/>
+                <!-- <field name="family" optional="show"/> -->
                 <field name="description" optional="hide"/>
                 <field name="last_maintenance_date" optional="hide"/>
             </list>
@@ -43,7 +43,7 @@
                     </div>
                     <group>
                         <field name="family_id"/>
-                        <field name="family" widget="radio"/>
+                        <!-- <field name="family" widget="radio"/> -->
                     </group>
                     <notebook>
                     <page string="Description">
