Tutoria 2 - Profesores, Cursos, lecciones y clases

--- a/music_school_angel/views/music_school_menuitems.xml
+++ b/music_school_angel/views/music_school_menuitems.xml
@@ -8,15 +8,43 @@
 
     <menuitem
         id="music_school_student_menu"
-        name="Student"
+        name="Students"
         action="music_school_student_action"
         parent="music_school_menu"
         sequence="10"/>
 
     <menuitem
         id="music_school_instrument_menu"
-        name="Instrument"
+        name="Instruments"
         action="music_school_instrument_action"
+        parent="music_school_menu"
+        sequence="10"/>
+
+    <menuitem
+        id="music_school_professor_menu"
+        name="Professors"
+        action="music_school_professor_action"
+        parent="music_school_menu"
+        sequence="10"/>
+
+    <menuitem
+        id="music_school_course_menu"
+        name="Courses"
+        action="music_school_course_action"
+        parent="music_school_menu"
+        sequence="10"/>
+
+    <menuitem
+        id="music_school_classroom_menu"
+        name="Classrooms"
+        action="music_school_classroom_action"
+        parent="music_school_menu"
+        sequence="10"/>
+
+    <menuitem
+        id="music_school_lesson_menu"
+        name="Lessons"
+        action="music_school_lesson_action"
         parent="music_school_menu"
         sequence="10"/>
 
