[ADD] computed fields, orm

--- a/music_school_nacho/views/music_school_course_views.xml
+++ b/music_school_nacho/views/music_school_course_views.xml
@@ -41,6 +41,8 @@
                     <button string="Action Draft" invisible="state in ('draft')" name="action_draft" type="object" class="btn-secondary"/>
                     <button string="Action in Progress" invisible="state in ('progress')" name="action_progress" type="object" class="btn-success"/>
                     <button string="Action finish" invisible="state in ('finished')" name="action_finish" type="object" class="btn-primary"/>
+                    <button string="Create Lesson" name="create_lesson" type="object" class="btn-primary"/>
+                    <button string="Assign students" name="assign_students" type="object" class="btn-secondary"/>
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
@@ -65,6 +67,9 @@
                     <notebook>
                         <page string="Description">
                             <field name="description"/>
+                        </page>
+                        <page string="Students">
+                            <field name="student_ids"/>
                         </page>
                     </notebook>
                 </sheet>
