--- a/music_school_nacho/views/music_school_student_views.xml
+++ b/music_school_nacho/views/music_school_student_views.xml
@@ -43,6 +43,7 @@
                 </div>
                 <group>
                     <group>
+                        <field name="partner_id"/>
                         <field name="reference" readonly="1"/>
                         <field name="email"/>
                         <field name="phone"/>
