--- a/music_school_edu/views/music_school_student_view.xml
+++ b/music_school_edu/views/music_school_student_view.xml
@@ -42,6 +42,7 @@
                     </div>
                     <group>
                     <group>
+                        <field name="partner_id"/>
                         <field name="reference" readonly="1"/>
                         <field name="email"/>
                         <field name="phone"/>
