--- a/music_school_edu/views/music_school_course_view.xml
+++ b/music_school_edu/views/music_school_course_view.xml
@@ -49,7 +49,7 @@
                     </div>
                     <group>
                     <group>
-                        <field name="teacher_id"/>
+                        <field name="teacher_id" domain="[('level','=',level)]"/>
                         <field name="level"/>
                         <field name="capacity"/>
                     </group>
@@ -78,7 +78,7 @@
         <field name="arch" type="xml">
             <kanban highlight_color="color" default_group_by="state" class="o_kanban_small_column" on_create="quick_create">
             <field name="name"/>
-            <field name="teacher_id"/>
+            <field name="teacher_id" />
             <field name="instrument_id"/>
             <field name="level"/>
             <field name="start_date"/>
@@ -97,9 +97,10 @@
                             <div class="d-flex mt-auto align-items-center">
                                 <field name="level" widget="priority" class="me-2"/>
                             </div>
-                            <field name="teacher_id" widget="many2one_avatar_user" class="ms-auto"/>
+                            <field name="teacher_id" widget="many2one_avatar_user" class="ms-auto" domain="[('level','=',level)]"/>
                            
                         </footer>
+                        
                     </t>
                 </templates>
             </kanban>
