--- a/music_school_edu/views/music_school_teacher_view.xml
+++ b/music_school_edu/views/music_school_teacher_view.xml
@@ -27,9 +27,6 @@
         <field name="model">music.school.teacher</field>
         <field name="arch" type="xml">
             <form string="">
-            <!-- <header>
-                <button string="Generate reference" name="generate_reference" type="object" class="oe_highlight"/>
-            </header> -->
                 <sheet>
                     <div class="oe_title">
                         <h1>
@@ -38,7 +35,7 @@
                     </div>
                     <group>
                         <group>
-                            <field name="reference" readonly="1"/>
+                            <field name="level"/>
                             <field name="email"/>
                             <field name="phone"/>
                         </group>
