[ADD] more computed fields

--- a/music_school_nacho/views/music_school_course_views.xml
+++ b/music_school_nacho/views/music_school_course_views.xml
@@ -61,6 +61,7 @@
                         <group>
                             <field name="start_date"/>
                             <field name="end_date"/>
+                            <field name="day_duration"/>
                             <field name="capacity"/>
                         </group>
                     </group>
