--- a/music_school_nacho/views/music_school_instrument_views.xml
+++ b/music_school_nacho/views/music_school_instrument_views.xml
@@ -22,6 +22,7 @@
                 <field name="family_id" optional="show"/>
                 <!-- <field name="family" optional="show"/> -->
                 <field name="description" optional="hide"/>
+                <field name="is_repaired" widget="boolean_toggle" optional="show"/>
                 <field name="last_maintenance_date" optional="hide"/>
             </list>
         </field>
@@ -52,6 +53,7 @@
                     <page string="Observations">
                     <group>
                         <field name="last_maintenance_date" readonly="1"/>
+                        <field name="is_repaired" widget="boolean_toggle"/>
                     </group>
                     </page>
                 </notebook>
