--- a/music_school_angel/views/music_school_course_views.xml
+++ b/music_school_angel/views/music_school_course_views.xml
@@ -4,7 +4,7 @@
 <record id="music_school_course_action" model="ir.actions.act_window">
     <field name="name">Courses</field>
     <field name="res_model">music.school.course</field>
-    <field name="view_mode">list,form</field>
+    <field name="view_mode">kanban,pivot,list,graph,calendar,form</field>
     <field name="context">{}</field>
     <field name="help" type="html">
         <p class="o_view_nocontent_smiling_face">
@@ -51,7 +51,7 @@
                 </div>
                 <group>
                     <group>
-                        <field name="professor_id"/>
+                        <field name="professor_id" domain="[('level', '=', level)]"/>
                         <field name="instrument_id"/>
                         <field name="level"/>
                         <field name="start_date"/>
@@ -68,5 +68,93 @@
         </form>
     </field>
 </record>
+
+
+<record id="music_school_course_view_search" model="ir.ui.view">
+    <field name="name">music.school.course.view.search</field>
+    <field name="model">music.school.course</field>
+    <field name="arch" type="xml">
+        <search string="Course">
+            <field name="name" filter_domain="['|',('instrument_id', 'ilike', self), ('name', 'ilike', self)]"></field>
+            <field name="professor_id"></field>
+            <field name="instrument_id"></field>
+            <filter name="draft_filter" string="Draft" domain="[('state', '=', 'draft')]" />
+            <filter name="progress_filter" string="In Progress" domain="[('state', '=', 'progress')]" />
+            <filter name="Professor" string="Professor" context="{'group_by': 'professor_id'}" />
+            <filter name="Level" string="Level" context="{'group_by': 'level'}" />
+       </search>
+    </field>
+</record>
+
+<record id="music_school_course_view_kanban" model="ir.ui.view">
+    <field name="name">musich.school.course.view.kanban</field>
+    <field name="model">music.school.course</field>
+    <field name="arch" type="xml">
+        <kanban highlight_color="color" default_group_by="state" class="o_kanban_small_column" on_create="quick_create">
+            <field name="name"/>
+            <field name="professor_id"/>
+            <field name="instrument_id"/>
+            <field name="level"/>
+            <field name="start_date"/>
+            <templates>
+                <t t-name="menu">
+                    <t t-if="widget.editable"><a role="menuitem" type="open" class="dropdown-item">Edit</a></t>
+                    <t t-if="widget.deletable"><a role="menuitem" type="delete" class="dropdown-item">Delete</a></t>
+                    <field name="color" widget="kanban_color_picker"/> 
+                </t>
+                <t t-name="card">
+                    <field name="name" class="fw-bold fs-5"/>
+                    <field name="instrument_id" class=""/>
+                    
+                    <field name="start_date"/>
+                    <footer>
+                        <div class="d-flex mt-auto align-items-center">
+                            <field name="level" widget="priority" class="me-2"/>
+                        </div>
+                        <field name="professor_id" widget="many2one_avatar_user" class="ms-auto"/>
+                        
+                    </footer>
+                </t>
+            </templates>
+        </kanban>
+    </field>
+</record>
+
+
+    <record id="music_school_course_view_pivot" model="ir.ui.view">
+        <field name="name">music.school.course.view.pivot</field>
+        <field name="model">music.school.course</field>
+        <field name="arch" type="xml">
+            <pivot string="Course">
+                <field name="professor_id" type="row"/>
+                <field name="start_date" type="col"/>
+                <field name="capacity" type="measure"/>
+            </pivot>
+        </field>
+    </record>
+
+    <record id="music_school_course_view_graph" model="ir.ui.view">
+        <field name="name">music.school.course.view.graph</field>
+        <field name="model">music.school.course</field>
+        <field name="arch" type="xml">
+            <graph string="Course" type="bar">
+                <field name="professor_id"/>
+                <field name="capacity" type="measure"/>
+            </graph>
+        </field>
+    </record>
+
+    <record id="music_school_course_view_calendar" model="ir.ui.view">
+        <field name="name">music.school.course.view.calendar</field>
+        <field name="model">music.school.course</field>
+        <field name="arch" type="xml">
+            <calendar string="Course" date_start="start_date" date_stop="end_date" color="professor_id">
+                <field name="name"/>
+                <field name="professor_id"/>
+                <field name="instrument_id"/>
+                <field name="level"/>
+            </calendar>
+        </field>
+    </record>
 
 </odoo>
