--- a/music_school_angel/views/music_school_lesson_views.xml
+++ b/music_school_angel/views/music_school_lesson_views.xml
@@ -2,9 +2,9 @@
 <odoo>
 
 <record id="music_school_lesson_action" model="ir.actions.act_window">
-    <field name="name">Students</field>
+    <field name="name">Lessons</field>
     <field name="res_model">music.school.lesson</field>
-    <field name="view_mode">list,form</field>
+    <field name="view_mode">list,kanban,pivot,graph,calendar,form</field>
     <field name="context">{}</field>
     <field name="help" type="html">
         <p class="o_view_nocontent_smiling_face">
@@ -54,5 +54,95 @@
         </form>
     </field>
 </record>
+
+
+    <record id="music_school_lesson_view_search" model="ir.ui.view">
+        <field name="name">music.school.lesson.view.search</field>
+        <field name="model">music.school.lesson</field>
+        <field name="arch" type="xml">
+            <search string="Lesson">
+                <field name="course_id" string="Course"/>
+                <field name="professor_id" string="Teacher"/>
+                <field name="classroom_id" string="Classroom"/>
+                <filter name="not_assigned" string="Not Assigned" domain="[('professor_id', '=', False)]"/>
+                <filter name="start_datetime" string="Start Date" context="{'group_by': 'start_datetime'}" />
+                <filter name="classroom" string="Classroom" context="{'group_by': 'classroom_id'}" />
+                <filter name="professor" string="Professor" context="{'group_by': 'professor_id'}" />
+                <filter name="filter_yesterday" string="Ayer"
+                    domain="[('start_datetime', '&gt;=', (context_today() - relativedelta(days=1)).strftime('%%Y-%%m-%%d 00:00:00')),
+                         ('start_datetime', '&lt;', context_today().strftime('%%Y-%%m-%%d 00:00:00'))]"/>
+
+            </search>
+        </field>
+    </record>
+
+
+    <record id="music_school_lesson_view_kanban" model="ir.ui.view">
+        <field name="name">music.school.lesson.view.kanban</field>
+        <field name="model">music.school.lesson</field>
+        <field name="arch" type="xml">
+            <kanban highlight_color="color" default_group_by="state" class="o_kanban_small_column" on_create="quick_create">
+            <field name="course_id"/>   
+            <field name="professor_id"/>
+            <field name="classroom_id"/>
+            <field name="start_datetime"/>
+                <templates>
+                    <t t-name="menu">
+                        <t t-if="widget.editable"><a role="menuitem" type="open" class="dropdown-item">Edit</a></t>
+                        <t t-if="widget.deletable"><a role="menuitem" type="delete" class="dropdown-item">Delete</a></t>
+                        <field name="color" widget="kanban_color_picker"/> 
+                    </t>
+                    <t t-name="card">
+                        <field name="course_id" class="fw-bold fs-5"/>
+                        <field name="start_datetime"/>
+                        <footer>
+                            <div class="d-flex mt-auto align-items-center">
+                                <field name="classroom_id" class="me-2"/>
+                            </div>
+                            <field name="professor_id" widget="many2one_avatar_user" class="ms-auto"/>
+                           
+                        </footer>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
+
+    <record id="music_school_lesson_view_pivot" model="ir.ui.view">
+        <field name="name">music.school.lesson.view.pivot</field>
+        <field name="model">music.school.lesson</field>
+        <field name="arch" type="xml">
+            <pivot string="Lesson">
+                <field name="start_datetime" type="row"/>
+                <field name="course_id" type="col"/>
+                <field name="duration" widget="float_time" type="measure"/>
+            </pivot>
+        </field>
+    </record>
+
+    <record id="music_school_lesson_view_calendar" model="ir.ui.view">
+        <field name="name">music.school.lesson.view.calendar</field>
+        <field name="model">music.school.lesson</field>
+        <field name="arch" type="xml">
+            <calendar string="Lesson" date_start="start_datetime" color="course_id">
+                <field name="course_id"/>
+                <field name="professor_id"/>
+                <field name="classroom_id"/>
+
+            </calendar>
+        </field>
+    </record>
+
+    <record id="music_school_lesson_view_graph" model="ir.ui.view">
+        <field name="name">music.school.lesson.view.graph</field>
+        <field name="model">music.school.lesson</field>
+        <field name="arch" type="xml">
+            <graph string="Lesson" type="bar">
+                <field name="course_id"/>
+                <field name="duration" widget="float_time" type="measure"/>
+            </graph>
+        </field>
+    </record>
 
 </odoo>
